<resources>
    <string name="app_name">School App</string>
    <string name="password">password</string>
    <string name="signIntext">Sign In</string>
    <string name="confirm">SUCCESS</string>
    <string name="Usernameext">Username</string>
    <string name="PasswordText">Password</string>
    <string name="LogInTex">Log In</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="radio_male">"Male"</string>
    <string name="radio_female">"Female"</string>
    <string name="Registration">" Student Registration form"</string>
    <string name="StaffRegistration">" Staff Registration form"</string>
    <string name="CategoryRegistration">"Registration"</string>
    <string name="navigation_drawer_open">"Open navigation drawer"</string>
    <string name="navigation_drawer_close">"Close navigation drawer"</string>

    <string name="number">"Registration Number"</string>
    <string name="register">Register</string>
    <string name="logInPage">Log In Page</string>
    <string name="categorytext">Choose category</string>
    <string name="welcome_Registration">

        This functionality allows you as a student to register courses for the next academic year.

    </string>
    <string name="changePassword">
        This functionality allows you to change your password any time you wish to do so.</string>
    <string name="Mydetails">
        This functionality allows you to view your details any time you wish to do so.
    </string>


    <string-array name="Region_Arrays">
        <item>Arusha</item>
        <item>Dar es Salaam</item>
        <item>Dodoma</item>
        <item>Geita</item>
        <item>Iringa</item>
        <item>Kagera</item>
        <item>Katavi</item>
        <item>Kigoma</item>
        <item>Kilimanjaro</item>
        <item>Lindi</item>
        <item>Manyara</item>
        <item>Mara</item>
        <item>Mbeya</item>
        <item>Morogoro</item>
        <item>Mtwara</item>
        <item>Mwanza</item>
        <item>Njombe</item>
        <item>Pwani</item>
        <item>Rukwa</item>
        <item>Ruvuma</item>
        <item>Shinyanga</item>
        <item>Simiyu</item>
        <item>Singida</item>
        <item>Songwe</item>
        <item>Tabora</item>
        <item>Tanga</item>
        <item>Zanzibar</item>
    </string-array>


    <string-array name="Daressalaam">
        <item>Kinondoni</item>
        <item>Ilala</item>
        <item>Temeke</item>
        <item>Ubungo</item>
        <item>Kigamboni</item>

    </string-array>

    <string-array name="Arusha">
        <item>Monduli</item>
        <item>Longido</item>
        <item>Meru</item>
        <item>Arusha Vijijini</item>
        <item>Arusha Mjini</item>
        <item>Ngorongoro</item>
        <item>Karatu</item>
    </string-array>


    <string-array name="Dodoma">

        <item>Bahi</item>
        <item>Chamwino</item>
        <item>Chemba</item>
        <item>Dodoma</item>
        <item>Mpwapwa</item>
        <item>Kondoa</item>
        <item>Kongwa</item>

    </string-array>


    <string-array name="Ilala">

        <item>Buguruni</item>
        <item>Chanika</item>
        <item>Gerezani</item>
        <item>Ilala</item>
        <item>Jangwani</item>
        <item>Kariakoo</item>
        <item>Kinyerezi</item>
        <item>Kipawa</item>
        <item>Kitunda</item>
        <item>Kisutu</item>
        <item>Kivukoni</item>
        <item>Kiwalani</item>
        <item>Mchafukoge</item>
        <item>Mchikichini</item>
        <item>Msongola</item>
        <item>Pugu</item>
        <item>Segerea</item>
        <item>Tabata</item>
        <item>Ukonga</item>
        <item>Upanga East</item>
        <item>Upanga West</item>
        <item>Vingunguti</item>

    </string-array>


    <string-array name="Kinondoni">

        <item>Bunju</item>
        <item>Goba</item>
        <item>Hananasif</item>
        <item>Kawe</item>
        <item>Kibamba</item>
        <item>Kigogo</item>
        <item>Kijitonyama</item>
        <item>Kimara</item>
        <item>Kinondoni</item>
        <item>Kunduchi</item>
        <item>Mabibo</item>
        <item>Magomeni</item>
        <item>Makuburi</item>
        <item>Makumbusho</item>
        <item>Makurumula</item>
        <item>Manzese</item>
        <item>Mbezi</item>
        <item>Mburahati</item>
        <item>Mbweni</item>
        <item>Mikocheni</item>
        <item>Msasani</item>
        <item>Mwananyamala</item>
        <item>Mzimuni</item>
        <item>Ndugumbi</item>
        <item>Sinza</item>
        <item>Tandale</item>
        <item>Ubungo</item>
<item>Select Regions</item>
    </string-array>

    <string-array name="Temeke">

        <item>Azimio</item>
        <item>Chamazi</item>
        <item>Chang\'ombe</item>
        <item>Charambe</item>
        <item>Keko</item>
        <item>Kigamboni</item>
        <item>Kibada</item>
        <item>Kimbiji</item>
        <item>Kisarawe II</item>
        <item>Kurasini</item>
        <item>Makangarawe</item>
        <item>Mbagala</item>
        <item>Mbagala Kuu</item>
        <item>Miburani</item>
        <item>Mjimwema</item>
        <item>Mtoni</item>
        <item>Pemba Mnazi</item>
        <item>Sandali</item>
        <item>Somangira</item>
        <item>Tandika</item>
        <item>Temeke</item>
        <item>Toangoma</item>
        <item>Vijibweni</item>
        <item>Yombo Vituka</item>


    </string-array>


</resources>
