<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Staff">

    <RelativeLayout
        android:id="@+id/StaffRegistrationheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#2F4F4F"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/StaffTopView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/StaffRegistration"
            android:textColor="#DCDCDC"
            android:textSize="25sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/StaffRegistrationLayout"
        android:layout_width="332dp"
        android:layout_height="562dp"
        android:layout_marginBottom="95dp"
        android:orientation="vertical"
        android:padding="@dimen/cardview_compat_inset_shadow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Registrationheader">



        <EditText
            android:id="@+id/StaffFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="First Name"
            android:inputType="textPersonName"
            />

        <EditText
            android:id="@+id/StaffMiddleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Middle Name"
            android:inputType="textPersonName"
            />

        <EditText
            android:id="@+id/StaffLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Last Name"
            android:inputType="textPersonName"
            />

        <EditText
            android:id="@+id/StaffDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:editable="false"
            android:ems="10"
            android:focusable="false"
            android:hint="Date Of Birth"
            android:inputType="date"

            />

        <EditText
            android:id="@+id/StaffEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Email"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/StaffPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Phone Number"
            android:inputType="phone"
            />

        <Spinner
            android:id="@+id/StaffRegions"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            />

        <Spinner
            android:id="@+id/StaffDistricts"
            android:layout_width="match_parent"
            android:layout_height="35dp" />

        <Spinner
            android:id="@+id/StaffWards"
            android:layout_width="match_parent"
            android:layout_height="35dp" />


        <RadioGroup
            android:id="@+id/StaffGender"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Stafftv"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:text="Gender"
                android:textSize="20dp" />

            <RadioButton
                android:id="@+id/StaffradioMale"
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:text="@string/radio_male" />

            <RadioButton
                android:id="@+id/StaffradioFemale"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:text="@string/radio_female" />

        </RadioGroup>


    </LinearLayout>

    <Button
        android:id="@+id/StaffRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/register"
        android:background="#F5EDEE "
        app:layout_constraintBottom_toBottomOf="@id/StaffRegistrationLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>